now works for more than 2 tags

--- a/project-pre-alpha.ipynb
+++ b/project-pre-alpha.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>How delete record Django models?</td>\n",
-       "      <td>django,model</td>\n",
+       "      <td>delete,django,model</td>\n",
        "      <td>SomeModel.objects.filter(id=id).delete()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -146,27 +146,99 @@
        "      <td>concatenate,integers</td>\n",
        "      <td>sum(d * 10 ** i for i, d in enumerate(x[::-1]))</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Converting int to String and Strings to int</td>\n",
+       "      <td>string,integer</td>\n",
+       "      <td>String a = String.valueOf(2);  \\nint i = Integ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Converting String to date in Java</td>\n",
+       "      <td>string,date</td>\n",
+       "      <td>java.util.Date = java.text.DateFormat.getDateI...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Converting Java util.Date to sql.Date</td>\n",
+       "      <td>util.date,sql.date</td>\n",
+       "      <td>java.util.Date utilDate = new java.util.Date()...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>HTTP Proxy setting in Java</td>\n",
+       "      <td>proxy,setting</td>\n",
+       "      <td>System.getProperties().put(\"http.proxyHost\", \"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Sending the HTTP request and fetching data wit...</td>\n",
+       "      <td>http,request</td>\n",
+       "      <td>import java.io.BufferedReader;\\nimport java.io...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Creating JSON data in Java</td>\n",
+       "      <td>json,java</td>\n",
+       "      <td>mport org.json.JSONObject; ... ... JSONObject ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Converting Array to Map in Java</td>\n",
+       "      <td>array,map</td>\n",
+       "      <td>import java.util.Map;\\nimport org.apache.commo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Get name of current method</td>\n",
+       "      <td>name,method</td>\n",
+       "      <td>String methodName = Thread.currentThread().get...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Appending content to file in Java</td>\n",
+       "      <td>append,file</td>\n",
+       "      <td>Jaxenter out = null;\\ntry {\\n    out = new Jax...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            Question                   Tag  \\\n",
-       "0                   How delete record Django models?          django,model   \n",
-       "1                   regex repeating words string `s`          regex,string   \n",
-       "2  BeautifulSoup search string 'Elsie' inside tag...  beautifulsoup,search   \n",
-       "3                normalize pandas dataframe `df` row      pandas,normalize   \n",
-       "4  Concatenate elements list 'x' multiple integer...  concatenate,integers   \n",
+       "                                             Question                   Tag  \\\n",
+       "0                    How delete record Django models?   delete,django,model   \n",
+       "1                    regex repeating words string `s`          regex,string   \n",
+       "2   BeautifulSoup search string 'Elsie' inside tag...  beautifulsoup,search   \n",
+       "3                 normalize pandas dataframe `df` row      pandas,normalize   \n",
+       "4   Concatenate elements list 'x' multiple integer...  concatenate,integers   \n",
+       "5         Converting int to String and Strings to int        string,integer   \n",
+       "6                   Converting String to date in Java           string,date   \n",
+       "7               Converting Java util.Date to sql.Date    util.date,sql.date   \n",
+       "8                          HTTP Proxy setting in Java         proxy,setting   \n",
+       "9   Sending the HTTP request and fetching data wit...          http,request   \n",
+       "10                         Creating JSON data in Java             json,java   \n",
+       "11                    Converting Array to Map in Java             array,map   \n",
+       "12                         Get name of current method           name,method   \n",
+       "13                  Appending content to file in Java           append,file   \n",
        "\n",
-       "                                             Snippet  \n",
-       "0           SomeModel.objects.filter(id=id).delete()  \n",
-       "1  re.sub('(?<!\\\\S)((\\\\S+)(?:\\\\s+\\\\2))(?:\\\\s+\\\\2)...  \n",
-       "2                 soup.find_all('a', string='Elsie')  \n",
-       "3                     df.div(df.sum(axis=1), axis=0)  \n",
-       "4    sum(d * 10 ** i for i, d in enumerate(x[::-1]))  "
+       "                                              Snippet  \n",
+       "0            SomeModel.objects.filter(id=id).delete()  \n",
+       "1   re.sub('(?<!\\\\S)((\\\\S+)(?:\\\\s+\\\\2))(?:\\\\s+\\\\2)...  \n",
+       "2                  soup.find_all('a', string='Elsie')  \n",
+       "3                      df.div(df.sum(axis=1), axis=0)  \n",
+       "4     sum(d * 10 ** i for i, d in enumerate(x[::-1]))  \n",
+       "5   String a = String.valueOf(2);  \\nint i = Integ...  \n",
+       "6   java.util.Date = java.text.DateFormat.getDateI...  \n",
+       "7   java.util.Date utilDate = new java.util.Date()...  \n",
+       "8   System.getProperties().put(\"http.proxyHost\", \"...  \n",
+       "9   import java.io.BufferedReader;\\nimport java.io...  \n",
+       "10  mport org.json.JSONObject; ... ... JSONObject ...  \n",
+       "11  import java.util.Map;\\nimport org.apache.commo...  \n",
+       "12  String methodName = Thread.currentThread().get...  \n",
+       "13  Jaxenter out = null;\\ntry {\\n    out = new Jax...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
@@ -185,14 +257,23 @@
     {
      "data": {
       "text/plain": [
-       "['django,model',\n",
+       "['delete,django,model',\n",
        " 'regex,string',\n",
        " 'beautifulsoup,search',\n",
        " 'pandas,normalize',\n",
-       " 'concatenate,integers']"
+       " 'concatenate,integers',\n",
+       " 'string,integer',\n",
+       " 'string,date',\n",
+       " 'util.date,sql.date',\n",
+       " 'proxy,setting',\n",
+       " 'http,request',\n",
+       " 'json,java',\n",
+       " 'array,map',\n",
+       " 'name,method',\n",
+       " 'append,file']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,22 +285,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list2 = []\n",
+    "for i in range(len(l)):\n",
+    "    m = l[i]\n",
+    "    my_list2.extend(m.split(','))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['django', 'regex', 'beautifulsoup', 'pandas', 'concatenate']"
+       "['delete',\n",
+       " 'django',\n",
+       " 'model',\n",
+       " 'regex',\n",
+       " 'string',\n",
+       " 'beautifulsoup',\n",
+       " 'search',\n",
+       " 'pandas',\n",
+       " 'normalize',\n",
+       " 'concatenate',\n",
+       " 'integers',\n",
+       " 'string',\n",
+       " 'integer',\n",
+       " 'string',\n",
+       " 'date',\n",
+       " 'util.date',\n",
+       " 'sql.date',\n",
+       " 'proxy',\n",
+       " 'setting',\n",
+       " 'http',\n",
+       " 'request',\n",
+       " 'json',\n",
+       " 'java',\n",
+       " 'array',\n",
+       " 'map',\n",
+       " 'name',\n",
+       " 'method',\n",
+       " 'append',\n",
+       " 'file']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i.split(',')[0] for i in l]"
+    "my_list = [i.split(',')[0] for i in l]\n",
+    "my_list1 = [i.split(',')[1] for i in l]\n",
+    "my_list.extend(my_list1)\n",
+    "my_list2"
    ]
   },
   {
@@ -241,31 +365,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "key_processor.add_keywords_from_dict(keyword_dict)"
+    "key_processor.add_keywords_from_list(my_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['regex', 'string']"
+       "['delete', 'django', 'model']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = key_processor.extract_keywords(' regex app which bulid string')\n",
+    "k = key_processor.extract_keywords(' delete django model')\n",
     "k"
    ]
   },
@@ -291,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -329,21 +453,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df.div(df.sum(axis=1), axis=0)\n"
+      "SomeModel.objects.filter(id=id).delete()\n"
      ]
     }
    ],
    "source": [
-    "s = 'pandas normalize dataframe `df` row'\n",
+    "s = 'How to delete record on a django model'\n",
     "code = return_code(s)\n",
     "code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "java.util.Date utilDate = new java.util.Date();\n",
+      "java.sql.Date sqlDate = new java.sql.Date(utilDate.getTime());\n"
+     ]
+    }
+   ],
+   "source": [
+    "return_code('util.date to sql.date')"
    ]
   },
   {
