--- a/project-pre-alpha.ipynb
+++ b/project-pre-alpha.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,25 +121,25 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>How delete record Django models?</td>\n",
-       "      <td>delete,django,model</td>\n",
+       "      <td>delete,django,model,record</td>\n",
        "      <td>SomeModel.objects.filter(id=id).delete()</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>regex repeating words string `s`</td>\n",
-       "      <td>regex,string</td>\n",
+       "      <td>regex,repeating,string</td>\n",
        "      <td>re.sub('(?&lt;!\\\\S)((\\\\S+)(?:\\\\s+\\\\2))(?:\\\\s+\\\\2)...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BeautifulSoup search string 'Elsie' inside tag...</td>\n",
-       "      <td>beautifulsoup,search</td>\n",
+       "      <td>beautifulsoup,search,string</td>\n",
        "      <td>soup.find_all('a', string='Elsie')</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>normalize pandas dataframe `df` row</td>\n",
-       "      <td>pandas,normalize</td>\n",
+       "      <td>dataframe,normalize,pandas</td>\n",
        "      <td>df.div(df.sum(axis=1), axis=0)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -149,55 +151,55 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Converting int to String and Strings to int</td>\n",
-       "      <td>string,integer</td>\n",
+       "      <td>integer,string</td>\n",
        "      <td>String a = String.valueOf(2);  \\nint i = Integ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Converting String to date in Java</td>\n",
-       "      <td>string,date</td>\n",
+       "      <td>date,java,string</td>\n",
        "      <td>java.util.Date = java.text.DateFormat.getDateI...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Converting Java util.Date to sql.Date</td>\n",
-       "      <td>util.date,sql.date</td>\n",
+       "      <td>java,sql.date,util.date</td>\n",
        "      <td>java.util.Date utilDate = new java.util.Date()...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>HTTP Proxy setting in Java</td>\n",
-       "      <td>proxy,setting</td>\n",
+       "      <td>http,java,proxy,setting,</td>\n",
        "      <td>System.getProperties().put(\"http.proxyHost\", \"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Sending the HTTP request and fetching data wit...</td>\n",
-       "      <td>http,request</td>\n",
+       "      <td>fetch,http,java,request</td>\n",
        "      <td>import java.io.BufferedReader;\\nimport java.io...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Creating JSON data in Java</td>\n",
-       "      <td>json,java</td>\n",
+       "      <td>data,json,java</td>\n",
        "      <td>mport org.json.JSONObject; ... ... JSONObject ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Converting Array to Map in Java</td>\n",
-       "      <td>array,map</td>\n",
+       "      <td>array,java,map</td>\n",
        "      <td>import java.util.Map;\\nimport org.apache.commo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Get name of current method</td>\n",
-       "      <td>name,method</td>\n",
+       "      <td>current,method,name</td>\n",
        "      <td>String methodName = Thread.currentThread().get...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Appending content to file in Java</td>\n",
-       "      <td>append,file</td>\n",
+       "      <td>append,file,java</td>\n",
        "      <td>Jaxenter out = null;\\ntry {\\n    out = new Jax...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -205,21 +207,37 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             Question                   Tag  \\\n",
-       "0                    How delete record Django models?   delete,django,model   \n",
-       "1                    regex repeating words string `s`          regex,string   \n",
-       "2   BeautifulSoup search string 'Elsie' inside tag...  beautifulsoup,search   \n",
-       "3                 normalize pandas dataframe `df` row      pandas,normalize   \n",
-       "4   Concatenate elements list 'x' multiple integer...  concatenate,integers   \n",
-       "5         Converting int to String and Strings to int        string,integer   \n",
-       "6                   Converting String to date in Java           string,date   \n",
-       "7               Converting Java util.Date to sql.Date    util.date,sql.date   \n",
-       "8                          HTTP Proxy setting in Java         proxy,setting   \n",
-       "9   Sending the HTTP request and fetching data wit...          http,request   \n",
-       "10                         Creating JSON data in Java             json,java   \n",
-       "11                    Converting Array to Map in Java             array,map   \n",
-       "12                         Get name of current method           name,method   \n",
-       "13                  Appending content to file in Java           append,file   \n",
+       "                                             Question  \\\n",
+       "0                    How delete record Django models?   \n",
+       "1                    regex repeating words string `s`   \n",
+       "2   BeautifulSoup search string 'Elsie' inside tag...   \n",
+       "3                 normalize pandas dataframe `df` row   \n",
+       "4   Concatenate elements list 'x' multiple integer...   \n",
+       "5         Converting int to String and Strings to int   \n",
+       "6                   Converting String to date in Java   \n",
+       "7               Converting Java util.Date to sql.Date   \n",
+       "8                          HTTP Proxy setting in Java   \n",
+       "9   Sending the HTTP request and fetching data wit...   \n",
+       "10                         Creating JSON data in Java   \n",
+       "11                    Converting Array to Map in Java   \n",
+       "12                         Get name of current method   \n",
+       "13                  Appending content to file in Java   \n",
+       "\n",
+       "                            Tag  \\\n",
+       "0    delete,django,model,record   \n",
+       "1        regex,repeating,string   \n",
+       "2   beautifulsoup,search,string   \n",
+       "3    dataframe,normalize,pandas   \n",
+       "4          concatenate,integers   \n",
+       "5                integer,string   \n",
+       "6              date,java,string   \n",
+       "7       java,sql.date,util.date   \n",
+       "8      http,java,proxy,setting,   \n",
+       "9       fetch,http,java,request   \n",
+       "10               data,json,java   \n",
+       "11               array,java,map   \n",
+       "12          current,method,name   \n",
+       "13             append,file,java   \n",
        "\n",
        "                                              Snippet  \n",
        "0            SomeModel.objects.filter(id=id).delete()  \n",
@@ -238,7 +256,7 @@
        "13  Jaxenter out = null;\\ntry {\\n    out = new Jax...  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,106 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['delete,django,model',\n",
-       " 'regex,string',\n",
-       " 'beautifulsoup,search',\n",
-       " 'pandas,normalize',\n",
-       " 'concatenate,integers',\n",
-       " 'string,integer',\n",
-       " 'string,date',\n",
-       " 'util.date,sql.date',\n",
-       " 'proxy,setting',\n",
-       " 'http,request',\n",
-       " 'json,java',\n",
-       " 'array,map',\n",
-       " 'name,method',\n",
-       " 'append,file']"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l = list(data['Tag'])\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_list2 = []\n",
-    "for i in range(len(l)):\n",
-    "    m = l[i]\n",
-    "    my_list2.extend(m.split(','))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['delete',\n",
-       " 'django',\n",
-       " 'model',\n",
-       " 'regex',\n",
-       " 'string',\n",
-       " 'beautifulsoup',\n",
-       " 'search',\n",
-       " 'pandas',\n",
-       " 'normalize',\n",
-       " 'concatenate',\n",
-       " 'integers',\n",
-       " 'string',\n",
-       " 'integer',\n",
-       " 'string',\n",
-       " 'date',\n",
-       " 'util.date',\n",
-       " 'sql.date',\n",
-       " 'proxy',\n",
-       " 'setting',\n",
-       " 'http',\n",
-       " 'request',\n",
-       " 'json',\n",
-       " 'java',\n",
-       " 'array',\n",
-       " 'map',\n",
-       " 'name',\n",
-       " 'method',\n",
-       " 'append',\n",
-       " 'file']"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_list = [i.split(',')[0] for i in l]\n",
-    "my_list1 = [i.split(',')[1] for i in l]\n",
-    "my_list.extend(my_list1)\n",
-    "my_list2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,67 +284,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key_processor.add_keywords_from_list(my_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['delete', 'django', 'model']"
+       "['delete,django,model,record',\n",
+       " 'regex,repeating,string',\n",
+       " 'beautifulsoup,search,string',\n",
+       " 'dataframe,normalize,pandas',\n",
+       " 'concatenate,integers',\n",
+       " 'integer,string',\n",
+       " 'date,java,string',\n",
+       " 'java,sql.date,util.date',\n",
+       " 'http,java,proxy,setting,',\n",
+       " 'fetch,http,java,request',\n",
+       " 'data,json,java',\n",
+       " 'array,java,map',\n",
+       " 'current,method,name',\n",
+       " 'append,file,java']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = key_processor.extract_keywords(' delete django model')\n",
+    "l = list(data['Tag'])\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list2 = []\n",
+    "for i in range(len(l)):\n",
+    "    m = l[i]\n",
+    "    my_list2.extend(m.split(','))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['delete',\n",
+       " 'django',\n",
+       " 'model',\n",
+       " 'record',\n",
+       " 'regex',\n",
+       " 'repeating',\n",
+       " 'string',\n",
+       " 'beautifulsoup',\n",
+       " 'search',\n",
+       " 'string',\n",
+       " 'dataframe',\n",
+       " 'normalize',\n",
+       " 'pandas',\n",
+       " 'concatenate',\n",
+       " 'integers',\n",
+       " 'integer',\n",
+       " 'string',\n",
+       " 'date',\n",
+       " 'java',\n",
+       " 'string',\n",
+       " 'java',\n",
+       " 'sql.date',\n",
+       " 'util.date',\n",
+       " 'http',\n",
+       " 'java',\n",
+       " 'proxy',\n",
+       " 'setting',\n",
+       " '',\n",
+       " 'fetch',\n",
+       " 'http',\n",
+       " 'java',\n",
+       " 'request',\n",
+       " 'data',\n",
+       " 'json',\n",
+       " 'java',\n",
+       " 'array',\n",
+       " 'java',\n",
+       " 'map',\n",
+       " 'current',\n",
+       " 'method',\n",
+       " 'name',\n",
+       " 'append',\n",
+       " 'file',\n",
+       " 'java']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_processor.add_keywords_from_list(my_list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['data', 'java', 'json']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = key_processor.extract_keywords('json data java')\n",
+    "k.sort()\n",
     "k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'regex,string'"
+       "'http,java,proxy,setting'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "','.join(k)"
+    "','.join(k)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SomeModel.objects.filter(id=id).delete()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = 'django,model'\n",
     "for i in range(len(l)):\n",
@@ -435,16 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def return_keyword(word):\n",
     "    ans = key_processor.extract_keywords(word)\n",
+    "    ans.sort()\n",
     "    return ans\n",
     "\n",
     "def return_code(sentence):\n",
-    "    c = return_keyword(sentence)\n",
+    "    c = return_keyword(sentence.lower())\n",
     "    c = ','.join(c)\n",
     "    for i in range(len(l)):\n",
     "        if(c == l[i]):\n",
@@ -453,26 +477,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SomeModel.objects.filter(id=id).delete()\n"
+      "java.util.Date = java.text.DateFormat.getDateInstance().parse(date String);\n"
      ]
     }
    ],
    "source": [
-    "s = 'How to delete record on a django model'\n",
+    "s = 'Converting String to date in Java'\n",
     "code = return_code(s)\n",
     "code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
